Fix letter spacing in safari via theme

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -9,8 +9,11 @@ textarea {
   -webkit-appearance: none;
 }
 * {
+  text-rendering: optimizeLegibility;
+  font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-feature-settings: "kern";
 }
 
 .checkmark__circle {
@@ -65,10 +68,4 @@ textarea {
 
 body {
   font-family: "DM Sans", sans-serif;
-}
-
-h1,
-h2,
-h3 {
-  letter-spacing: -1px;
 }
